tests/ui/feature-gates/feature-gate-extern_prelude.rs
can-only-test-this-in-run-make-fulldeps //~ ERROR expected one of `!` or `::`, found `-`
